--- a/STBookInventory/templates/STBookInventory/delete_book.html
+++ b/STBookInventory/templates/STBookInventory/delete_book.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Delete Book</title>
-</head>
-<body>
-    <h1>Delete Book</h1>
+{% extends "bookinventoryapplayout.html" %}
+
+{% block title %}deletebook{% endblock %}
+
+{%block heading %}
+    You are about to delete a book
+{% endblock %}
+
+{% block body %}
     <p>Are you sure you want to delete "{{ book.title }}"?</p>
     <form method="post">
         {% csrf_token %}
         <button type="submit">Delete</button>
     </form>
-</body>
-</html>
+{% endblock %}
